test changes done to index html

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Celebrate your personal records in style. 
+      Mini gym collectibles, built for your biggest lifts. THE MINI PR - custom-made, aesthetic, and proudly Indian."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
