--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   <html lang="en">
     <head>
       <meta charset="utf-8" />
-      <link rel="icon" href="/favicon.png" type="image/png" />
+      <link rel="icon" href="https://res.cloudinary.com/dr55mgsnm/image/upload/v1757875729/logo_avk7bw_jbqiz5.png" type="image/png" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
       <meta
